--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style-physical.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style-logical.css" />
     <title>Curso Esencial de HTML y CSS</title>
   </head>
   <body>
