Slider with CSS

--- a/index.html
+++ b/index.html
@@ -241,6 +241,54 @@
               title="Programar cambió mi vida."
             />
           </section>
+          <section class="content">
+            <h2>Videos muy lindos</h2>
+            <div class="slider">
+              <scroll-container class="slider_container">
+                <scroll-page id="video-1" class="slider_slide">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/LJcGnZuKOrk"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+                <scroll-page class="slider_slide" id="video-2">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/3RCnbb2Juzg"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+                <scroll-page class="slider_slide" id="video-3">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/aRB0YwVCabY"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+              </scroll-container>
+              <div class="slider_bullet_list">
+                <a href="#video-1" class="slider_bullet"></a>
+                <a href="#video-2" class="slider_bullet"></a>
+                <a href="#video-3" class="slider_bullet"></a>
+              </div>
+            </div>
+          </section>
           <p>
             Si tienes alguna pregunta escríbeme a
             <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com </a>
