--- a/index.html
+++ b/index.html
@@ -235,11 +235,6 @@
               </li>
             </ul>
             <h3>Modelo de caja</h3>
-            <img
-              src="img/thumb.png"
-              alt="Fotografía de Leonidas Esteban: Programar cambió mi vida"
-              title="Programar cambió mi vida."
-            />
           </section>
           <section class="content">
             <h2>Videos muy lindos</h2>
@@ -293,7 +288,14 @@
             Si tienes alguna pregunta escríbeme a
             <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com </a>
           </p>
-          <h3>Suscríbete a nuestro newsletter</h3>
+          <h2>Suscríbete a nuestro newsletter</h2>
+          <section class="content">
+            <form action="#" class="form">
+              <input type="text" require placeholder="Nombre" />
+              <input type="email" require placeholder="Correo Electrónico" />
+              <input type="submit" value="Suscribirme" />
+            </form>
+          </section>
         </div>
       </div>
     </main>
