Open graph image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       property="og:image"
-      content="https://ia.media-imdb.com/images/rock.jpg"
+      content="https://hectordevx.github.io/esencial-html-css/img/dom.png"
     />
     <meta
       property="og:description"
